# bsharp

./: .gitignore  README.md  environment.yml  plot_sounding.py  pyproject.toml  setup.cfg  setup.py  versioneer.py
.claude/: settings.local.json
bsharp/: __init__.py  cli.py
bsharp/databases/: pwv.py  sars.py
bsharp/io/: __init__.py  csv.py  decoder.py  qc_tools.py  spc_decoder.py
bsharp/sharptab/: fire.py  interp.py  params.py  prof_collection.py  profile.py  thermo.py  utils.py  watch_type.py  winds.py
bsharp/viz/: SPCWindow.py  __init__.py  advection.py  analogues.py  barbs.py  fire.py  fonts.py  hodo.py  kinematics.py  preferences.py  ship.py  skew.py  slinky.py  speed.py  srwinds.py  stp.py  stpef.py  thermo.py  thetae.py  vrot.py  watch.py  winter.py
datasources/: available.py  data_source.py  global_ua.csv  standard.xml
examples/: plot_sars.py
runsharp/: full_gui.py
sharppy/: gui.py  sounding.py
sharppy/databases/: pwv.py  sars.py  sars_cal.py
sharppy/io/: arw_decoder.py  decoder.py  nucaps_decoder.py  pecan_decoder.py  qc_tools.py  spc_decoder.py
sharppy/sharptab/: prof_collection.py  profile.py
sharppy/tests/: test_misc.py  test_plotting.py
sharppy/viz/: SPCWindow.py  advection.py  analogues.py  ensemble.py  fire.py  generic.py  hodo.py  kinematics.py  map.py  ship.py  skew.py  slinky.py  speed.py  srwinds.py  stp.py  stpef.py  thermo.py  thetae.py  vrot.py  watch.py  winter.py
sutils/: async.py  async_threads.py  config.py  frozenutils.py  utils.py
